--- a/server/app/static/css/main.css
+++ b/server/app/static/css/main.css
@@ -203,6 +203,28 @@ textarea:focus {
   font-size: 20px;
 }
 
+.work-btn-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.work-btn-wrapper i {
+  background: #FFF;
+  padding: 12px 12px;
+  border-radius: 5px;
+  color: #e20b0b;
+  font-size: 20px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.work-btn-wrapper .work-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+}
+
 @media (max-width:1024px) {
   .mb-m-150 {
     margin-bottom: 150px;
@@ -304,9 +326,36 @@ textarea:focus {
   .work-grid .video-card {
     grid-area: 2;
   }
+
+  .work-btn-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+  }
+
+  h2 {
+    font-size: 28px;
+    font-weight: 500;
+  }
+
+  h1 {
+    font-size: 35px;
+    font-weight: 600;
+  }
 }
 
 @media (max-width:640px) {
+  h2 {
+    font-size: 25px;
+    font-weight: 500;
+  }
+
+  h1 {
+    font-size: 30px;
+    font-weight: 600;
+  }
+
   .mar-100 {
     margin: 25px;
     margin-top: 80px;
@@ -332,7 +381,7 @@ textarea:focus {
   }
 
   .width-20 {
-    width: 70%;
+    width: 80%;
   }
 
   .ml-100 {
