feat: added tailwind

--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Логин | Фитнес-трекер</title>
   <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon" />
+  <link href="../static/css/tailwind.css" rel="stylesheet" />
   <link href="../static/css/main.css" rel="stylesheet" />
   <script src="../static/js/lib.js"></script>
 </head>
