--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon" />
   <script src="../static/js/lib.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="../static/css/tailwind.css" rel="stylesheet" />
   <link href="../static/css/main.css" rel="stylesheet" />
 </head>
 
