--- a/server/app/templates/new-workouts.html
+++ b/server/app/templates/new-workouts.html
@@ -8,7 +8,8 @@
   <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon" />
   <script src="../static/js/lib.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link href="../static/css/tailwind.css" rel="stylesheet" />
+  <!-- <link href="../static/css/tailwind.css" rel="stylesheet" /> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css">
   <link href="../static/css/main.css" rel="stylesheet" />
 </head>
 
@@ -74,7 +75,7 @@
     </div>
     <div id="defaultModal" tabindex="-1" aria-hidden="true"
       class="overflow-y-auto overflow-x-hidden flex top-0 right-0 left-0 z-60 justify-center items-center w-full md:inset-0 h-modal md:h-full">
-      <div class="relative p-4 w-full max-w-2xl h-full md:h-auto mt-10">
+      <div class="relative p-4 w-full max-w-2xl h-full md:h-auto mt-10 smb-24">
         <!-- Modal content -->
         <div class="profile-card">
           <!-- Modal header -->
@@ -85,7 +86,7 @@
           </div>
           <!-- Modal body -->
           <form id="form">
-            <div class="grid gap-4 mb-4 sm:grid-cols-2">
+            <div class="grid gap-4 mb-4 flex-c">
               <div>
                 <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Название
                   тренировки
