--- a/server/app/static/css/main.css
+++ b/server/app/static/css/main.css
@@ -132,7 +132,7 @@ textarea:focus {
 }
 
 .width-20 {
-  width: 20%;
+  width: 30%;
 }
 
 .space-y-2>:not([hidden])~:not([hidden]) {
@@ -146,7 +146,7 @@ textarea:focus {
 }
 
 .ml-100 {
-  margin-left: 24rem;
+  margin-left: 0rem;
 }
 
 .workout-grid {
@@ -223,9 +223,21 @@ textarea:focus {
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
+  word-break: break-all;
 }
 
 @media (max-width:1024px) {
+  .flexing-mob {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+  }
+
+  .pb-120p {
+    padding-bottom: 120px;
+  }
+
   .mb-m-150 {
     margin-bottom: 150px;
   }
@@ -277,7 +289,7 @@ textarea:focus {
   }
 
   .width-20 {
-    width: 40%;
+    width: 60%;
   }
 
   .video-card {
@@ -343,9 +355,22 @@ textarea:focus {
     font-size: 35px;
     font-weight: 600;
   }
+
+  .ml-100 {
+    margin-left: 0;
+  }
 }
 
 @media (max-width:640px) {
+  .flex-c {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .smb-24 {
+    margin-bottom: 7rem;
+  }
+
   h2 {
     font-size: 25px;
     font-weight: 500;
