--- a/server/app/templates/workout.html
+++ b/server/app/templates/workout.html
@@ -9,6 +9,7 @@
 
   <script src="../../static/js/lib.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css">
   <link href="../../static/css/main.css" rel="stylesheet" />
 </head>
 
