--- a/server/app/templates/workout.html
+++ b/server/app/templates/workout.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Workout | Fitness Tracker</title>
+  <title>Отслеживание тренировок | фитнеса</title>
   <link rel="shortcut icon" href="../../static/favicon.ico" type="image/x-icon" />
 
   <script src="../../static/js/lib.js"></script>
@@ -29,17 +29,17 @@
     <div class=" flex flex-col w-[70%] gap-6 rec-video">
 
       <div class="flex flex-col gap-2 ">
-        <div>Workout Name: <span id="workout-name"></span></div>
-        <div>Exercise Name: <span id="exercise-name"></span></div>
-        <div>Timer: <span id="timer">0:00</span></div>
+        <div>Название тренировки: <span id="workout-name"></span></div>
+        <div>Название упражнения: <span id="exercise-name"></span></div>
+        <div>Таймер: <span id="timer">0:00</span></div>
         <div hidden id="rest-timer-container">
-          Rest Time: <span id="rest-timer">0</span>
+          Время отдыха: <span id="rest-timer">0</span>
         </div>
-        <div>Repitions: <span id="repetition-count">0</span></div>
+        <div>Повторение: <span id="repetition-count">0</span></div>
       </div>
       <video id="video" class="h-100 " autoplay muted playsinline></video>
       <div class="mt-8">
-        <button class="primary-btn"><i class="fa-solid fa-arrow-down"></i>Download</button>
+        <button class="primary-btn"><i class="fa-solid fa-arrow-down"></i>Скачать</button>
       </div>
     </div>
 
