--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -139,7 +139,7 @@
                 <div id="workout-start-container">
                   <a id="workout-url"
                     class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900 primary-btn">
-                    Start Exercise
+                    Начать
                     <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20"
                       xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd"
