--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -95,7 +95,7 @@
               <label for="gender" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Пол</label>
               <select id="gender" name="gender"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                <option value="male">мужской</option>
+                <option value="male">Самец</option>
                 <option value="female" selected>Женский</option>
                 <option value="others">Другие</option>
               </select>
@@ -120,7 +120,7 @@
               <select id="activity-level" name="activity_level"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
                 <option selected>Выбирать</option>
-                <option value="1">немного</option>
+                <option value="1">Мало активный (менее 1-го раза в неделю)</option>
                 <option value="2">Умеренно активный (1-3 раза в неделю)</option>
                 <option value="3">Очень активный (3-5) раз в неделю</option>
               </select>
@@ -231,6 +231,13 @@
       localStorage.removeItem("access_token");
       localStorage.removeItem("refresh_token");
       window.location.href = "/login";
+    });
+
+    document.getElementById("phone-number").addEventListener("input", (e) => {
+      let phoneNumber = e.target.value;
+      if (phoneNumber.length > 10) {
+        e.target.value = phoneNumber.slice(0, 10);
+      }
     });
 
     function closeToast(id) {
