--- a/server/app/templates/workout.html
+++ b/server/app/templates/workout.html
@@ -63,7 +63,7 @@
           </button>
         </div>
       </div>
-
+      
       <div class="flex w-[20%] video-card">
         <video
           id="helper-video"
@@ -77,12 +77,18 @@
         ></video>
       </div>
 
-      <img
+      <div class="audio">
+        <audio src="../../static/audio/track-1.mp3" controls loop></audio>
+      </div>
+
+      <!-- This is no longer required -->
+      <!-- <img
         id="received-img"
         src=""
         alt="Received Image"
         style="display: block; width: 100%; max-width: 640px"
-      />
+      /> -->
+
     </main>
 
     <script>
@@ -99,16 +105,20 @@
       const accessToken = localStorage.getItem("access_token");
       const workoutId = window.location.pathname.split("/").pop();
       const video = document.getElementById("video");
-      const receivedImg = document.getElementById("received-img");
       const repetitionsCountElement =
-        document.getElementById("repetition-count");
+      document.getElementById("repetition-count");
       const restTimerElement = document.getElementById("rest-timer");
       const timerElement = document.getElementById("timer");
       const downloadButton = document.getElementById("download-button");
       const protocol = window.location.protocol === "https:" ? "wss" : "ws";
+      let isCustom = false;
       const ws = new WebSocket(
         `${protocol}://${window.location.host}/api/v1/ws`
-      );
+        );
+
+      // This is no longer required as we are not displaying the received image
+      // const receivedImg = document.getElementById("received-img");
+
       let connectionId = "";
 
       if (!accessToken) {
@@ -135,6 +145,39 @@
         timerElement.innerText = `${minutes}:${
           seconds < 10 ? "0" : ""
         }${seconds}`;
+
+        if (startTime === undefined) {
+          return;
+        }
+
+        let timeSpent = (Date.now() - startTime) / 1000;
+          if (timeSpent >= workout.total_time && !isResting) {
+            endTime = Date.now();
+            isResting = true;
+            startRestPeriod();
+
+            fetch(`/api/v1/workouts/sessions`, {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+                Authorization: `Bearer ${accessToken}`,
+              },
+              body: JSON.stringify({
+                workout_id: workout.id,
+                start_time: new Date(startTime).toISOString(),
+                end_time: new Date(endTime).toISOString(),
+                repetitions: repetitions,
+              }),
+            })
+              .then((res) => {
+                if (res.status !== 200) {
+                  // handle token expiration
+                }
+              })
+              .catch((err) => {
+                console.error("Failed to complete workout", err);
+              });
+          }
       }
 
       (async () => {
@@ -149,6 +192,7 @@
 
         document.getElementById("workout-name").innerText = data.name;
         document.getElementById("exercise-name").innerText = data.exercise.name;
+
         document.getElementById(
           "helper-video"
         ).src = `../../static/videos/${data.exercise.video_link}`;
@@ -180,7 +224,8 @@
         const message = JSON.parse(event.data);
 
         if (message.type === "image") {
-          receivedImg.src = `data:image/jpeg;base64,${message.data}`;
+          // This is no longer required as we are not displaying the received image
+          // receivedImg.src = `data:image/jpeg;base64,${message.data}`;
         } else if (message.type === "count") {
           repetitions = parseInt(message.data);
           repetitionsCountElement.innerText = repetitions;
@@ -193,6 +238,8 @@
         document
           .getElementById("rest-timer-container")
           .removeAttribute("hidden");
+          // debug this.
+        document.getElementById("helper-videi").paused = true;
         updateRestTimer();
       }
 
@@ -236,35 +283,6 @@
             return;
           }
 
-          let timeSpent = (Date.now() - startTime) / 1000;
-          if (timeSpent >= workout.total_time && !isResting) {
-            endTime = Date.now();
-            isResting = true;
-            startRestPeriod();
-
-            fetch(`/api/v1/workouts/sessions`, {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-                Authorization: `Bearer ${accessToken}`,
-              },
-              body: JSON.stringify({
-                workout_id: workout.id,
-                start_time: new Date(startTime).toISOString(),
-                end_time: new Date(endTime).toISOString(),
-                repetitions: repetitions,
-              }),
-            })
-              .then((res) => {
-                if (res.status !== 200) {
-                  // handle token expiration
-                }
-              })
-              .catch((err) => {
-                console.error("Failed to complete workout", err);
-              });
-          }
-
           const aspectRatio = video.videoWidth / video.videoHeight;
           let targetHeight = 120;
           let targetWidth = aspectRatio * targetHeight;
@@ -290,8 +308,15 @@
           setTimeout(sendFrame, interval);
         };
 
-        sendFrame();
         setInterval(updateTimer, 1000);
+
+        // do not send data if the exercise is custom
+        if (workout.exercise.id === "custom") {
+          return;
+        }
+
+        sendFrame();
+
       });
 
       function bufferToBase64(buffer) {
