--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -16,22 +16,6 @@
 </head>
 
 <body>
-  <script>
-    (async () => {
-      await authFlow(null, "/login");
-
-      let accessToken = localStorage.getItem("access_token");
-      let { res, data } = await getUser(accessToken);
-      if (res.status === 401) {
-        window.location.href = "/login";
-      }
-
-      if (data.username === "") {
-        window.location.href = "/profile";
-      }
-    })();
-  </script>
-
   <main class="flex flex-col w-full">
     <nav
       class="top-0 z-50 w-full bg-white border-b border-gray-200 px-3 py-3 lg:px-5 lg:pl-3 flex items-center flex-wrap justify-between mx-auto p-4">
@@ -238,8 +222,50 @@
         </div>
         <canvas id="workout-chart" class="p-1 mb-5 mb-m-150"></canvas>
       </div>
+
+      <section id="toasts">
+        <div id="toast-danger"
+          class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800 z-50"
+          role="alert" style="display: none">
+          <div
+            class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200">
+            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+              viewBox="0 0 20 20">
+              <path
+                d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z" />
+            </svg>
+            <span class="sr-only">Тревога</span>
+          </div>
+          <div class="ms-3 text-sm font-normal" id="toast-danger-text"></div>
+          <button type="button"
+            class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+            data-dismiss-target="#toast-danger" aria-label="Close" onclick="closeToast('toast-danger')">
+            <span class="sr-only">Закрывать</span>
+            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+            </svg>
+          </button>
+        </div>
+      </section>
     </div>
   </main>
+
+  <script>
+    (async () => {
+      await authFlow(null, "/login");
+
+      let accessToken = localStorage.getItem("access_token");
+      let { res, data } = await getUser(accessToken);
+      if (res.status === 401) {
+        window.location.href = "/login";
+      }
+
+      document.getElementById('toast-danger').style.display = '';
+      document.getElementById('toast-danger-text').innerText = "Пожалуйста, заполните всю вашу информацию на странице профиля!";
+
+    })();
+  </script>
 
   <script>
     let workouts;
