--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -17,51 +17,69 @@
 
 <body>
   <main class="flex flex-col w-full">
-    <nav
-      class="top-0 z-50 w-full bg-white border-b border-gray-200 px-3 py-3 lg:px-5 lg:pl-3 flex items-center flex-wrap justify-between mx-auto p-4">
-      <a href="/dashboard" class="flex ms-2 md:me-24">
-        <img src="https://em-content.zobj.net/source/apple/76/flexed-biceps_1f4aa.png" class="h-8 me-3" alt="Логотип" />
-        <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Фитнес-трекер
-        </span>
-      </a>
+    <nav class="top-0 z-50 w-full bg-white border-b border-gray-200">
+      <div class="max-w-screen-xl mx-auto p-4 flex items-center flex-wrap justify-between ">
+        <div class="rtl:justify-end">
+          <button data-drawer-target="logo-sidebar" data-drawer-toggle="logo-sidebar" aria-controls="logo-sidebar"
+            type="button"
+            class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg  hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+            <span class="sr-only">Открыть боковую панель</span>
+            <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg">
+              <path clip-rule="evenodd" fill-rule="evenodd"
+                d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z">
+              </path>
+            </svg>
+          </button>
+        </div>
 
-      <!-- Sidebar toggle -->
-      <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-        <button type="button" id="logout" class="primary-btn red">
-          Выход
-        </button>
-        <button data-collapse-toggle="navbar-sticky" type="button"
-          class="mb-none inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-          aria-controls="navbar-sticky" aria-expanded="false">
-          <span class="sr-only">Открыть главное меню</span>
-          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M1 1h15M1 7h15M1 13h15" />
-          </svg>
-        </button>
-      </div>
+        <a href="/dashboard" class="flex ms-2 md:me-24">
+          <img src="https://em-content.zobj.net/source/apple/76/flexed-biceps_1f4aa.png" class="h-8 me-3"
+            alt="Логотип" />
+          <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Фитнес-трекер
+          </span>
+        </a>
 
-      <div class="mb-none items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-        <ul
-          class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-          <li>
-            <a href="#"
-              class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
-              aria-current="page">Упражнениеь</a>
-          </li>
-          <li>
-            <a href="/profile"
-              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Профиль</a>
-          </li>
+        <!-- Sidebar toggle -->
+        <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+          <button type="button" id="logout" class="primary-btn red">
+            Выход
+          </button>
+          <button data-collapse-toggle="navbar-sticky" type="button"
+            class="mb-none inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+            aria-controls="navbar-sticky" aria-expanded="false">
+            <span class="sr-only">Открыть главное меню</span>
+            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M1 1h15M1 7h15M1 13h15" />
+            </svg>
+          </button>
+        </div>
 
-          <li>
-            <a href="/workouts/new"
-              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Новая
-              тренировка</a>
-          </li>
-        </ul>
+        <div class="mb-none  items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
+          id="navbar-sticky">
+          <ul
+            class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+            <li>
+              <a href="#"
+                class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
+                aria-current="page">Упражнениеь</a>
+            </li>
+            <li>
+              <a href="/profile"
+                class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Профиль</a>
+            </li>
+
+            <li>
+              <a href="/workouts/new"
+                class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Новая
+                тренировка</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
+
     <div class="mob-nav-link">
       <ul class="mob-nav-list">
         <li>
@@ -77,7 +95,7 @@
       </ul>
     </div>
     <section class="flex w-full flex-col justify-between">
-      <div class="rtl:justify-end">
+      <!-- <div class="rtl:justify-end">
         <button data-drawer-target="logo-sidebar" data-drawer-toggle="logo-sidebar" aria-controls="logo-sidebar"
           type="button"
           class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg  hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
@@ -89,13 +107,13 @@
             </path>
           </svg>
         </button>
-      </div>
+      </div> -->
 
       <aside id="logo-sidebar"
         class=" pb-120p fixed top-0 left-0 z-40 pt-20 flex items-center justify-start md:w-[30%] lg:w-[20%] w-2/5 h-screen mt-20 transition-transform -translate-x-full bg-white border-r border-gray-200 lg:translate-x-0 dark:bg-gray-800 dark:border-gray-700 width-20"
         aria-label="Sidebar">
         <div class="flex flex-col h-full px-5 pb-4 pt-6 overflow-y-auto bg-white dark:bg-gray-800 w-full">
-          <h2 class="text-green-600 text-center mb-8">Мои тренировки</h2>
+          <h2 class="green-color text-center mb-8">Мои тренировки</h2>
           <ul class="space-y-2 font-medium" id="workouts"></ul>
           <div class="w-full flex flex-col items-center content-center">
             <a href="/workouts/new" class="flex px-8 py-3 items-center mt-5 primary-btn">
@@ -111,7 +129,7 @@
       </aside>
     </section>
 
-    <div class="flex-grow" id="workout-data">
+    <div class="flex-grow w-1200 " id="workout-data">
       <div class="p-4 sm:ml-64 ml-100 pd-0">
         <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700">
           <section class="bg-white dark:bg-gray-900 card-curve">
@@ -286,7 +304,7 @@
         li.innerHTML = `
             <button
               onclick="chooseWorkout(${workout.id})"
-              class="flex flex-col item-center content-center content-fit flex-flow w-full p-6 bg-white border border-gray-200 rounded-lg shadow transition-all	 hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 transition-all	"
+              class="flex flex-col item-center content-center content-fit flex-flow w-full p-6 bg-grad border border-gray-200 rounded-lg shadow transition-all	 hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 transition-all	"
             >
             <div class="work-btn-wrapper">
               <i class="fa-solid fa-dumbbell"></i>
