feat: fixed last 2 errors

--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -523,7 +523,7 @@
           workout = changeWorkout(workouts[0]);
         } else {
           document.getElementById("workout-data").innerHTML = `
-          <div class="flex flex-col items-center justify-center h-full">
+          <div class="flex flex-col items-center justify-center h-screen">
             <h1 class="text-3xl font-semibold text-gray-900 dark:text-white">Нет тренировок</h1>
             <a href="/workouts/new" class="mt-4 primary-btn">Добавить тренировку</a>
           </div>
