--- a/server/app/static/css/main.css
+++ b/server/app/static/css/main.css
@@ -285,10 +285,11 @@ textarea:focus {
   display: flex;
   align-items: center;
   flex-direction: column;
+  gap: 8px;
 }
 
 .icon-wraps i {
-  font-size: 22px;
+  font-size: 30px;
   color: #fff;
 }
 
