--- a/server/app/templates/workout.html
+++ b/server/app/templates/workout.html
@@ -236,6 +236,7 @@
             .classList.replace("grid-cols-2", "grid-cols-1");
           document.getElementById("helper-video-container").style.display =
             "none";
+          document.getElementById("download-button").disabled = true;
         }
 
         document.getElementById("workout-name").innerText = data.name;
