--- a/server/app/static/css/main.css
+++ b/server/app/static/css/main.css
@@ -335,7 +335,7 @@ textarea:focus {
   }
 
   .work-card .grid {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    /* grid-template-columns: repeat(2, minmax(0, 1fr)); */
     gap: 2px;
 
   }
@@ -546,7 +546,7 @@ textarea:focus {
   }
 
   .work-card .grid {
-    grid-template-columns: 1.5fr 1fr;
+    /* grid-template-columns: 1.5fr 1fr; */
     gap: 2px;
   }
 
